# project-petir

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
edge/: .env.example  pyproject.toml
edge/migrations/: 0001_meta_sync_state.sql  0002_summary_change_seq.sql  apply.py  inspect.py
edge/sync_worker/: client.py  config.py  cursors.py  normalize.py  readers.py  run.py  run_record.py  tables.py
edge/systemd/: petir-sync.service  petir-sync.service.tmpl  petir-sync.timer
edge/tests/: conftest.py  test_migration.py
edge/tests/integration/: test_run_against_mock_server.py
edge/tests/unit/: test_cursors.py  test_readers.py  test_tables_priority.py  test_timestamp_format.py
server/: Dockerfile  pyproject.toml  pyrightconfig.json
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_token_rotation.py  0003_retention_ai_hooks.py  0004_widen_edge_passthrough_int.py
server/app/: ai_hooks.py  db.py  main.py  retention.py  settings.py
server/app/ingest/: __init__.py  auth.py  errors.py  router.py  service.py  upserts.py
server/app/models/: __init__.py  ai.py  lightning.py  ops.py  registry.py  weather.py
server/app/query/: admin.py  auth.py  downsample.py  freshness.py  health.py  lightning.py  system.py  weather.py
server/app/schemas/: ingest.py  query.py
server/scripts/: register_node.py  seed_dev.py  test_real_pi_sync.py
server/tests/: conftest.py
server/tests/contract/: test_ingest_matches_contracts.py
server/tests/integration/: test_auth_ratelimit.py  test_ingest_auth.py  test_ingest_quarantine.py  (+6 more)
(+79 files in other folders)
