[project]
name = "petir-edge"
version = "1.0.0"
description = "PetirDashboard edge sync worker: single-run incremental PUSH from the Raspberry Pi SQLite to the lab server."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "petir-contracts>=1.0.0"]

[project.optional-dependencies]
test = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sync_worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
